# packagent

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.agents/skills/apd-headless/: SKILL.md
.agents/skills/pkgtk-eco-diff/: SKILL.md
.agents/skills/pkgtk-verify/: SKILL.md
.codex/: config.toml  hooks.json
.codex/agents/: eda-runner.toml  pkg-verifier.toml
.codex/hooks/: stop_label.py
Archive/phase-0-foundation/: Phase0.md
Archive/phase-1-ballmap-verifier/: Phase1.md
Archive/phase-2-package-lint/: Phase2.md
Archive/phase-3-sipi-validators/: Phase3.md
Archive/phase-4-llm-layer/: Phase4.md
Archive/phase-5-wow-tier/: Phase5.md
Archive/phase-6-integration/: Phase6.md
artifacts/: .gitignore
benchmarks/: BENCHMARKS.md  cases.yaml  lint_run.py  mutations.py  rollup.py  run.py
decks/: generic-substrate-v0.yaml
demo/: README.md
demo/dashboard/: index.html
demo/geom/: gen_substrates.py
demo/graphs/: make_graphs.py
demo/loop/: LOOP_DEMO.md  PLAYBOOK.md  analyze.py  apply_edit.py  build_and_solve.py  export_design.py  loop_check.py  run_iteration.py
demo/phys/: cavity_vs_solver.py  plane_pair_touchstone.s2p  t1_create.py  t5_syz.py  t6_extend_12g.py
demo/phys/ext12g/: plane_pair_12g_touchstone.s2p
demo/pkg/: gen_photonx1.py  make_defect.py  make_pinmap_xlsx.py  make_revb.py  photonx1.py
docs/: DEMO_SCRIPT.md  PHASE-NOTES.md  PITCH_INTRO_2PERSON.md  PITCH_SCRIPT.md  PRESENTATION.md  SHOWCASE_TODO.md  build-plan.md  checks-spec.md  codex-agent-finetune-plan.md  codex-finetune-STATUS.md  escape-spec.md  lint-spec.md  llm-spec.md  models-spec.md  moonshot-gating-plan.md  pdn-spec.md  schemas.md  tool-bringup-checklist.md
docs/pitch-assets/: CUE_SHEET.md  DESIGN_BRIEF.md  build_pitch.py  presentation.html  slideshow.html
evals/: README.md  __init__.py  graders.py  run_eval.py  task_gen.py
evals/reference/: models-catalog-0.144.6.json
fixtures/golden/aif/: minimal.aif  minimal.expected.json
fixtures/golden/bench/: bench01.json  bench02.json  bench03.json  bench04.json  bench05.json
fixtures/golden/diff/: expected_diff.json  expected_report.md  revA.json  revB.json
fixtures/golden/escape/: escape_deck.yaml  expected.json
fixtures/golden/lint/: broken_deck_schema.yaml  broken_deck_syntax.yaml  test_deck.yaml
fixtures/golden/pdn/: expected_resonances.json
fixtures/golden/schema-examples/: connectivity_graph.example.json  rule_ir.example.json  violation.example.json
fixtures/golden/templates/: conforming.json  swapped.json  swapped_expected.json  template.yaml
fixtures/synthetic/ibischk_stdout/: good1.txt  good2_clean.txt  truncated.txt
reference/aif/: README.md
schemas/: connectivity_graph.schema.json  rule_ir.schema.json  violation.schema.json
scripts/: build_lint_fixtures.py  demo.sh  extracta_to_graph.py  gen_schema_docs.py  golden_guard.py  pinmap_crosscheck.py
src/pkgtk/: __init__.py
src/pkgtk/checks/: __init__.py  common.py  rules.py
src/pkgtk/cli/: __init__.py  check.py  diff.py  escape.py  main.py  models.py  pdn.py  template.py  verify.py
src/pkgtk/diff/: __init__.py  engine.py  report.py
src/pkgtk/ingest/: __init__.py  aif.py
src/pkgtk/lint/: __init__.py  coverage.py  (+3 more)
tests/: test_aif.py  test_battery.py  test_bench.py  test_checks.py  test_cli_conventions.py  test_deck.py  test_diff.py  test_escape.py  test_eval_harness.py  test_expr_safety.py  test_ibis_gate.py  test_lint_checks.py  test_lyrdb.py  test_pdn_physics.py  test_provider_replay.py  test_registry.py  test_rollup_staleness.py  test_schema_roundtrip.py  test_smoke.py  test_substrate_bench.py  test_template.py  test_ts_gate.py
(+63 files in other folders)
