[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pkgtk"
version = "0.1.0"
description = "Package-design verification toolkit: ball-map verifier, package-lint, SI/PI validators, tier-0 oracles."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "jsonschema",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["Archive", "reference"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
