[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pkgtk"
version = "0.1.0"
description = "Package-design verification toolkit: ball-map verifier, package-lint, SI/PI validators, tier-0 oracles."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2",
    "jsonschema",
    "pyyaml",
    "rich",
    "typer",
    "numpy",
    "scipy",
    "networkx",
    "pandas",
    "openpyxl",
    "matplotlib",
    "jinja2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]
# Heavy / platform-specific extras kept out of the core install so `make ci`
# works everywhere. Installed per-phase where available.
geometry = [
    "gdstk",
    "klayout",
]
si = [
    "scikit-rf",
]
llm = [
    "anthropic",
]

[project.scripts]
pkgtk = "pkgtk.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"pkgtk.models" = ["migrations/*.sql", "templates/*.j2"]

[tool.ruff]
target-version = "py311"
src = ["src", "tests"]
extend-exclude = ["Archive", "reference"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
